Bug 1969253 - Call PostRender on all execution paths where PreRender was called.  a=RyanVM

Calling PreRender twice without a PostRender call in between causes us to hit a deadlock.
BeginFrame can return false when called for windows that are still in the process of
being opened, during which time they return a size of 0x0.

A new early return without a PostRender call was added in https://phabricator.services.mozilla.com/D245565 .

Original Revision: https://phabricator.services.mozilla.com/D252243

Differential Revision: https://phabricator.services.mozilla.com/D252362